--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -20,9 +20,10 @@ const { title } = Astro.props;
       $(document).ready(function() {
         $("#lunaradio_id").lunaradio({
           userinterface: "big",
+logo: "/cafe_con_radio.png"
           backgroundcolor: "#fff8f0",
           fontcolor: "#333333",
-          hightlightcolor: "##ce5a37",
+          hightlightcolor: "#ce5a37",
           fontfamily: "Saira Condensed, sans-serif",
           basefontcolor: "#ffffff",
           startvolume: "60",
